# project-echo

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  MEMORY.md  README.md  install.sh  pyproject.toml
agents/: archiver_agent.py  audio_fx.py  content_agent.py  framehead_agent.py  graph_store.py  monitor_agent.py  night_shift.py  offscreen_content.py  research_agent.py
config/: model-tiers.yaml
content/research/: public-profile-jason-niemi.md
docs/: architecture.md  dspark-research.md  echo-architecture.md  echo-brand-guide.md  echo-modularization-analysis.md  echo-user-guide.md  ornith-stress-test-report.md  tdd-discord-echo-plan.md  whitepaper-project-echo-current-state.md
examples/: consent-contract.yaml  system-state.json
graphs/: cost-dashboard.md  decision.yaml  intent.yaml
scripts/: archiver_agent.py  classify_task.py  content_agent.py  framehead_agent.py  graph_store.py  monitor_agent.py  packet_builder.py  research_agent.py  routing_logger.py  shorts_pipeline.py
src/echo_core/: __init__.py  __main__.py  wizard.py
src/echo_core/config/: model-tiers.yaml
src/echo_core/core/: __init__.py  classify_task.py  consent.py  log.py  module_loader.py  packet_builder.py  routing_logger.py  state.py
src/echo_core/data/: __init__.py  interfaces.py  models.py  repository.py
src/echo_core/data/backends/: __init__.py
tests/: __init__.py  test_classify_task.py  test_consent.py  test_packet_builder.py  test_state.py
