[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-core"
version = "1.0.0"
description = "Project Echo Core - lightweight digital twin infrastructure for autonomous multi-agent systems"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Project Echo Contributors"}
]
keywords = ["digital-twin", "agent", "autonomous", "orchestrator", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]
optional-dependencies = {wizard = ["questionary>=2.0", "rich>=13.0"], dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.urls]
Homepage = "https://github.com/NewBitsNow/echo-core"
Repository = "https://github.com/NewBitsNow/echo-core"

[project.scripts]
echo-core = "echo_core.__main__:main"
echo-wizard = "echo_core.wizard:main"